update sorting
